hphp/hack/test/typecheck/tconst/abstract_type_in_concrete_class.php.exp
File "abstract_type_in_concrete_class.php", line 7, characters 7-27:
This class must be declared abstract, or provide an implementation for the abstract type constant 'abstract_type' (Typing[4047])
File "abstract_type_in_concrete_class.php", line 4, characters 23-35:
Declaration is here
