hphp/hack/test/typecheck/tconst/abstract_type_in_concrete_class.php
<?hh

abstract class AbstractClassWithAbstract {
  abstract const type abstract_type as int;
}

class ClassWithAbstractType extends AbstractClassWithAbstract {}
